<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>chinese-chess-api</artifactId>

  <build>
    <plugins>
      <!-- Configuration for spring-boot-maven-plugin -->
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <classifier>exec</classifier>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
            <exclude>
              <artifactId>mapstruct</artifactId>
              <groupId>org.mapstruct</groupId>
            </exclude>
            <exclude>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
            </exclude>
          </excludes>
          <executable>true</executable>
          <image>
            <builder>paketobuildpacks/builder:tiny</builder>
            <env>
              <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
            </env>
          </image>
          <jvmArguments>-Dfile.encoding=UTF8</jvmArguments>
          <mainClass>com.nvs.ChineseChessApiApplication</mainClass>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>

      <!-- Configuration for hibernate-enhance-maven-plugin -->
      <plugin>
        <artifactId>hibernate-enhance-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <enableAssociationManagement>true</enableAssociationManagement>
              <enableDirtyTracking>true</enableDirtyTracking>
              <enableExtendedEnhancement>false</enableExtendedEnhancement>
              <enableLazyInitialization>true</enableLazyInitialization>
            </configuration>
            <goals>
              <goal>enhance</goal>
            </goals>
          </execution>
        </executions>
        <groupId>org.hibernate.orm.tooling</groupId>
        <version>${hibernate.version}</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.experimental</groupId>-->
    <!--            <artifactId>spring-native</artifactId>-->
    <!--            <version>0.12.1</version>-->
    <!--        </dependency>-->
    <dependency>
      <artifactId>spring-boot-starter-cache</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-redis</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-kafka</artifactId>
      <groupId>org.springframework.kafka</groupId>
    </dependency>
    <dependency>
      <artifactId>jakarta.validation-api</artifactId>
      <groupId>jakarta.validation</groupId>
      <version>3.0.2</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>mysql-connector-j</artifactId>
      <groupId>com.mysql</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>modelmapper</artifactId>
      <groupId>org.modelmapper</groupId>
      <version>3.2.0</version>
    </dependency>
    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>1.5.5.Final</version>
    </dependency>
    <dependency>
      <artifactId>mapstruct-processor</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>1.5.5.Final</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>jjwt-api</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>0.11.5</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-impl</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>0.11.5</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-jackson</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>0.11.5</version>
    </dependency>
    <dependency>
      <artifactId>auth0</artifactId>
      <groupId>com.auth0</groupId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <artifactId>auth0-spring-security-api</artifactId>
      <groupId>com.auth0</groupId>
      <version>1.5.3</version>
    </dependency>
    <dependency>
      <artifactId>tika-core</artifactId>
      <groupId>org.apache.tika</groupId>
      <version>2.8.0</version>
    </dependency>
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
    </dependency>
    <dependency>
      <artifactId>springdoc-openapi-ui</artifactId>
      <groupId>org.springdoc</groupId>
      <version>1.8.0</version>
    </dependency>
    <dependency>
      <artifactId>springdoc-openapi-core</artifactId>
      <groupId>org.springdoc</groupId>
      <version>1.1.49</version>
    </dependency>
  </dependencies>
  <description>Chinese Chess API</description>
  <groupId>com</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>Chinese Chess API</name>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.2.5</version>
  </parent>

  <pluginRepositories>
    <pluginRepository>
      <id>spring-releases</id>
      <name>Spring Releases</name>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://repo.spring.io/release</url>
    </pluginRepository>
  </pluginRepositories>

  <properties>
    <java.version>19</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <repositories>
    <repository>
      <id>spring-releases</id>
      <name>Spring Releases</name>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://repo.spring.io/release</url>
    </repository>
  </repositories>

  <version>27.05</version>

</project>
